--- a/portfolio.css
+++ b/portfolio.css
@@ -10,6 +10,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 .half-width{
     padding-left: 5%;
@@ -18,6 +19,9 @@ section{
 img{
     width: 80%;
 }
+#margin{
+    margin-left: 100px;
+}
 .button{
     text-decoration: none;
     color: white;
@@ -25,10 +29,26 @@ img{
     padding: 10px 20px;
     border-radius: 5%;
     font-weight: 1000;
+
 }
 #top{
     background-image: url(top-banner.png);
     background-repeat: no-repeat;
-    
+}
+.dream{
+    display: flex;
+    width: 50%;
+}
+h2{
+    font-size: 200%;
+}
 
+#color{
+    color: red;
+}
+#middle{
+    background-image: url(dream-bg.png);
+    background-repeat: no-repeat;
+    background-position:right ;
+    
 }
