--- a/portfolio.css
+++ b/portfolio.css
@@ -52,3 +52,9 @@ h2{
     background-position:right ;
     
 }
+.exp-area{
+    padding: 50px;
+    background-color: aliceblue;
+    border-color: blue;
+    margin: 10px;
+}
